Code reformatting, refactoring